fixed parted verse alignment

--- a/app/styles/_analogue.scss
+++ b/app/styles/_analogue.scss
@@ -45,3 +45,8 @@
 .analogue-indent {
     margin-left: 42px;
 }
+
+.analogue-lineN {
+    margin-left: -67px;
+    margin-right: 37px !important;
+}
